Fixing contrast issues

--- a/web-client/src/styles/overrides.scss
+++ b/web-client/src/styles/overrides.scss
@@ -55,7 +55,7 @@ option:first-child {
 .usa-hint {
   display: inline-block;
   margin-bottom: 15px;
-  color: color($theme-color-base);
+  color: color($theme-color-base-dark);
   font-size: 15px;
   font-weight: $font-regular;
   &.ustc-form-hint-with-svg {
